Fix photos spacing

--- a/_sass/jekyll_cmdbrew/components/_photos.scss
+++ b/_sass/jekyll_cmdbrew/components/_photos.scss
@@ -1,6 +1,6 @@
 .photos {
   .photo-wrap {
-    padding: map-get($spacers, 1);
+    padding: 1px;
   }
 
   .photo {
